# Agent_DB

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
config/: scope-vocabulary.yaml
docs/plans/: 2026-03-02-domain-agnostic-framework-design.md  2026-03-02-next-three-steps.md
domains/ra/: authority_levels.yaml  gate2_checklist.yaml  rule_id_convention.md
domains/test-legal/: authority_levels.yaml  gate2_checklist.yaml  rule_id_convention.md
mcp/: server.py
relations/: rel-fc-001.yaml  rel-fc-002.yaml  rel-fc-003.yaml  rel-fc-004.yaml  rel-fc-005.yaml
rules/: _domain.yaml
rules/kmdia-fc-detail/: art2-p1-main.yaml  (+4 more)
schemas/: rule-relation.schema.yaml  rule-unit.schema.yaml  traceability.schema.yaml
scripts/: approve.py  cascade.py  context.py  demo_retrieval.py  domain.py  gate1.py  gdrive_sync.py  ingest.py  queue_monitor.py  relation.py  retrieve.py  scope_monitor.py  validate.py
sources/: _sources.yaml
tasks/: todo.md
tests/: conftest.py  test_approve.py  test_cascade.py  test_connector_gdrive.py  test_context.py  test_domain.py  test_domain_e2e.py  test_e2e.py  test_gate1.py  test_gate1_integration.py  test_gdrive_sync.py  test_ingest_batch.py  test_ingest_draft.py  test_ingest_e2e.py  test_ingest_extract.py  test_ingest_ir.py  test_ingest_migration.py  test_ingest_parse.py  test_ingest_registry.py  test_ingest_split.py  test_ingest_version.py  test_mcp_server.py  test_queue_monitor.py  test_relation.py  test_retrieve.py  test_scope_monitor.py
traceability/: kmdia-fc-art5-p3.yaml  kmdia-fc-art6-p2.yaml  kmdia-fc-art7-p1.yaml
(+243 files in other folders)
